--- a/.github/workflows/main_lp2aplicacionweb.yml
+++ b/.github/workflows/main_lp2aplicacionweb.yml
@@ -12,11 +12,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
-
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: mysql
+          MYSQL_DATABASE: bdventas
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd "mysqladmin ping --silent"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 3
     steps:
       - uses: actions/checkout@v4
+
+      - name: Wait for MySQL
+        run: until mysqladmin ping -h127.0.0.1 --silent; do sleep 1; done
 
       - name: Set up Java version
         uses: actions/setup-java@v4
@@ -25,20 +38,24 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
+        env:
+          SPRING_DATASOURCE_URL: jdbc:mysql://127.0.0.1:3306/bdventas
+          SPRING_DATASOURCE_USERNAME: root
+          SPRING_DATASOURCE_PASSWORD: mysql
         run: mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: target/*.jar
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
   
     steps:
       - name: Download artifact from build job
@@ -59,5 +76,4 @@ jobs:
         with:
           app-name: 'lp2aplicacionweb'
           slot-name: 'Production'
-          package: '*.jar'
-          
+          package: 'java-app/*.jar'
