--- a/.github/workflows/main_lp2aplicacionweb.yml
+++ b/.github/workflows/main_lp2aplicacionweb.yml
@@ -76,4 +76,4 @@ jobs:
         with:
           app-name: 'lp2aplicacionweb'
           slot-name: 'Production'
-          package: 'java-app/*.jar'
+          package: '*.jar'
