--- a/.github/workflows/main_lp2aplicacionweb.yml
+++ b/.github/workflows/main_lp2aplicacionweb.yml
@@ -25,6 +25,7 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 3
+
     steps:
       - uses: actions/checkout@v4
 
@@ -56,13 +57,13 @@ jobs:
     permissions:
       id-token: write
       contents: read
-  
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -76,4 +77,4 @@ jobs:
         with:
           app-name: 'lp2aplicacionweb'
           slot-name: 'Production'
-          package: '*.jar'
+          package: 'java-app/*.jar'
