--- a/.github/workflows/main_lp2aplicacionweb.yml
+++ b/.github/workflows/main_lp2aplicacionweb.yml
@@ -77,4 +77,4 @@ jobs:
         with:
           app-name: 'lp2aplicacionweb'
           slot-name: 'Production'
-          package: 'java-app/*.jar'
+          path: ${{ github.workspace }}/target/*.jar
