--- a/.github/workflows/main_lp2aplicacionweb.yml
+++ b/.github/workflows/main_lp2aplicacionweb.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy JAR app to Azure Web App - lp2aplicacionweb
 
 on:
@@ -27,12 +24,13 @@ jobs:
           --health-retries 3
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Wait for MySQL
         run: until mysqladmin ping -h127.0.0.1 --silent; do sleep 1; done
 
-      - name: Set up Java version
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
           java-version: '17'
@@ -45,7 +43,7 @@ jobs:
           SPRING_DATASOURCE_PASSWORD: mysql
         run: mvn clean install
 
-      - name: Upload artifact for deployment job
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: java-app
@@ -59,7 +57,7 @@ jobs:
       contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: java-app
@@ -72,9 +70,8 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_280ADE9DA3E24706A5A9D9A521840C78 }}
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'lp2aplicacionweb'
           slot-name: 'Production'
-          path: ${{ github.workspace }}/target/*.jar
+          package: '*.jar'
